Atualização da zona do logotipo.

--- a/Trabalho design/4dez.html
+++ b/Trabalho design/4dez.html
@@ -13,7 +13,7 @@
     <section>
         <main>
             <div id="logo"> 
-                <img src="logo novo1.jpeg">
+                <img src="WhatsApp Image 2020-11-27 at 17.11.12.jpeg">
             </div>
            
             
