--- a/Trabalho design/4dez.html
+++ b/Trabalho design/4dez.html
@@ -13,7 +13,7 @@
     <section>
         <main>
             <div id="logo"> 
-                <img src="WhatsApp Image 2020-11-27 at 17.11.12.jpeg">
+                <img src="tiras de papel1.jpg">
             </div>
            
             
@@ -21,7 +21,8 @@
 
         </main>
         <aside>
-            <h3>Texto sobre a loja (o porque da criação)
+            <h3>Reciclagem do papel: como é feita e qual a sua importância?
+                <p>O primeiro passo para a reciclagem deste resíduo consiste na separação correcta dos produtos de papel, de modo a evitar a contaminação por agrafos, clips, elásticos, tintas, entre outros.</p>
             </h3>
         </aside>
     </section>
